// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopMenu /> Should render menu 1`] = `
<Menu
  inverted={true}
>
  <withProps(Link)
    onlyActiveOnIndex={true}
    to="/"
  >
    Главная
  </withProps(Link)>
  <withProps(Link)
    to="/features"
  >
    Возможности
  </withProps(Link)>
  <MenuItem>
    Базы слов
  </MenuItem>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    icon="dropdown"
    item={true}
    minCharacters={1}
    noResultsMessage="No results found."
    openOnFocus={true}
    renderLabel={[Function]}
    selectOnBlur={true}
    text="Помощники"
  >
    <DropdownMenu>
      <DropdownItem>
        Матрица Simple
      </DropdownItem>
      <DropdownItem>
        Матрица Continuous
      </DropdownItem>
      <DropdownItem>
        Выделение слов
      </DropdownItem>
      <DropdownItem>
        Числа на слух
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <MenuMenu
    position="right"
  >
    <Modal
      closeIcon={true}
      closeOnDimmerClick={true}
      closeOnDocumentClick={false}
      dimmer={true}
      size="small"
      trigger={Object {}}
    >
      <ModalHeader>
        Войти
      </ModalHeader>
      <ModalContent>
        <Connect(Component) />
      </ModalContent>
    </Modal>
  </MenuMenu>
</Menu>
`;

exports[`<TopMenu /> Should render menu for logged user 1`] = `
<Menu
  inverted={true}
>
  <withProps(Link)
    onlyActiveOnIndex={true}
    to="/"
  >
    Главная
  </withProps(Link)>
  <withProps(Link)
    to="/features"
  >
    Возможности
  </withProps(Link)>
  <MenuItem>
    Базы слов
  </MenuItem>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    icon="dropdown"
    item={true}
    minCharacters={1}
    noResultsMessage="No results found."
    openOnFocus={true}
    renderLabel={[Function]}
    selectOnBlur={true}
    text="Помощники"
  >
    <DropdownMenu>
      <DropdownItem>
        Матрица Simple
      </DropdownItem>
      <DropdownItem>
        Матрица Continuous
      </DropdownItem>
      <DropdownItem>
        Выделение слов
      </DropdownItem>
      <DropdownItem>
        Числа на слух
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <MenuMenu
    position="right"
  >
    <withProps(Link)
      to="/user"
    >
      Dashboard
    </withProps(Link)>
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      closeOnBlur={true}
      icon="dropdown"
      item={true}
      minCharacters={1}
      noResultsMessage="No results found."
      openOnFocus={true}
      renderLabel={[Function]}
      selectOnBlur={true}
      trigger={Object {}}
    >
      <DropdownMenu>
        <DropdownItem>
          Сменить пароль
        </DropdownItem>
        <withProps(Link)
          to="/logout"
        >
          Выйти
        </withProps(Link)>
      </DropdownMenu>
    </Dropdown>
  </MenuMenu>
</Menu>
`;
